[gd_scene load_steps=4 format=3 uid="uid://jhglmeyaolit"]

[ext_resource type="FontFile" uid="uid://bo1xqkmaq87nb" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_fn7tu"]
[ext_resource type="Script" path="res://scripts/level_menu.gd" id="1_lpave"]
[ext_resource type="FontFile" uid="uid://dc004b45phav2" path="res://assets/fonts/PixelOperator8.ttf" id="2_kwcnc"]

[node name="LevelMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lpave")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.089889, 0.000108192, 0.171655, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_fn7tu")
theme_override_font_sizes/font_size = 64
text = "Level Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Level1Button" type="MenuButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kwcnc")
theme_override_font_sizes/font_size = 32
text = "Level 1"

[node name="Level2Button" type="MenuButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kwcnc")
theme_override_font_sizes/font_size = 32
text = "Level 2"

[node name="Level3Button" type="MenuButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kwcnc")
theme_override_font_sizes/font_size = 32
text = "Level 3"

[node name="Level4Button" type="MenuButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kwcnc")
theme_override_font_sizes/font_size = 32
text = "Level 4"

[node name="Level5Button" type="MenuButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kwcnc")
theme_override_font_sizes/font_size = 32
text = "Level 5"

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_fn7tu")
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Level4Button" to="." method="_on_level_4_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Level5Button" to="." method="_on_level_5_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
